--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
 					</div>
 					
 					<div class="d-flex align-items-center justify-content-between">
-						<a href="https://maptool.ceschmitt.de/privacy-policy.html" target="_blank">Privacy Policy</a>
+						<a href="https://maptool.ceschmitt.de/privacy-policy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
 						<div class="d-flex align-items-center mt-2">
 							<button class="btn btn-secondary me-1" x-on:click="saveCookieSelection">Save</button>
 							<button class="btn btn-primary" x-on:click="allowAnalytics">Allow Analytics</button>
@@ -135,7 +135,7 @@
 				
 				<div x-show="$store.data.aboutOpen" class="mt-2" x-transition="">
 					<!-- HOW TO USE TOOL -->
-					<a href="https://www.youtube.com/watch?v=ZeM61AjhiS4" target="_blank">
+					<a href="https://www.youtube.com/watch?v=ZeM61AjhiS4" target="_blank" rel="noopener noreferrer">
 						<button class="btn btn-outline-primary w-100 text-start d-flex align-items-center">
 							<svg style="width:24px;height:24px" class="me-2" viewBox="0 0 24 24">
 								<path fill="currentColor" d="M10,15L15.19,12L10,9V15M21.56,7.17C21.69,7.64 21.78,8.27 21.84,9.07C21.91,9.87 21.94,10.56 21.94,11.16L22,12C22,14.19 21.84,15.8 21.56,16.83C21.31,17.73 20.73,18.31 19.83,18.56C19.36,18.69 18.5,18.78 17.18,18.84C15.88,18.91 14.69,18.94 13.59,18.94L12,19C7.81,19 5.2,18.84 4.17,18.56C3.27,18.31 2.69,17.73 2.44,16.83C2.31,16.36 2.22,15.73 2.16,14.93C2.09,14.13 2.06,13.44 2.06,12.84L2,12C2,9.81 2.16,8.2 2.44,7.17C2.69,6.27 3.27,5.69 4.17,5.44C4.64,5.31 5.5,5.22 6.82,5.16C8.12,5.09 9.31,5.06 10.41,5.06L12,5C16.19,5 18.8,5.16 19.83,5.44C20.73,5.69 21.31,6.27 21.56,7.17Z" />
@@ -152,7 +152,7 @@
 						</button>
 					</a>
 
-					<a target="_blank" href="https://github.com/Ceddini/CoreKeeperMapTool/discussions">
+					<a target="_blank" href="https://github.com/Ceddini/CoreKeeperMapTool/discussions" rel="noopener noreferrer">
 						<button class="btn btn-outline-primary w-100 text-start mt-2 d-flex align-items-center">
 							<svg style="width:24px;height:24px" class="me-2" viewBox="0 0 24 24">
 								<path fill="currentColor" d="M9 22C8.4 22 8 21.6 8 21V18H4C2.9 18 2 17.1 2 16V4C2 2.9 2.9 2 4 2H20C21.1 2 22 2.9 22 4V16C22 17.1 21.1 18 20 18H13.9L10.2 21.7C10 21.9 9.8 22 9.5 22H9M10 16V19.1L13.1 16H20V4H4V16H10M16.3 6L14.9 9H17V13H13V8.8L14.3 6H16.3M10.3 6L8.9 9H11V13H7V8.8L8.3 6H10.3Z" />
@@ -161,7 +161,7 @@
 						</button>
 					</a>
 
-					<a target="_blank" href="https://maptool-dev.ceschmitt.de">
+					<a target="_blank" href="https://maptool-dev.ceschmitt.de" rel="noopener noreferrer">
 						<button class="btn btn-outline-primary w-100 text-start mt-2">
 							<svg style="width:24px;height:24px" class="me-2" viewBox="0 0 24 24">
 								<path fill="currentColor" d="M8,3A2,2 0 0,0 6,5V9A2,2 0 0,1 4,11H3V13H4A2,2 0 0,1 6,15V19A2,2 0 0,0 8,21H10V19H8V14A2,2 0 0,0 6,12A2,2 0 0,0 8,10V5H10V3M16,3A2,2 0 0,1 18,5V9A2,2 0 0,0 20,11H21V13H20A2,2 0 0,0 18,15V19A2,2 0 0,1 16,21H14V19H16V14A2,2 0 0,1 18,12A2,2 0 0,1 16,10V5H14V3H16Z" />
@@ -170,7 +170,7 @@
 						</button>
 					</a>
 
-					<a target="_blank" href="https://linktr.ee/ceddini">
+					<a target="_blank" href="https://linktr.ee/ceddini" rel="noopener noreferrer">
 						<button class="btn btn-outline-primary w-100 text-start mt-2">
 							<svg style="width:24px;height:24px" class="me-2" viewBox="0 0 24 24">
 								<path fill="currentColor" d="M22,12V20A2,2 0 0,1 20,22H4A2,2 0 0,1 2,20V12A1,1 0 0,1 1,11V8A2,2 0 0,1 3,6H6.17C6.06,5.69 6,5.35 6,5A3,3 0 0,1 9,2C10,2 10.88,2.5 11.43,3.24V3.23L12,4L12.57,3.23V3.24C13.12,2.5 14,2 15,2A3,3 0 0,1 18,5C18,5.35 17.94,5.69 17.83,6H21A2,2 0 0,1 23,8V11A1,1 0 0,1 22,12M4,20H11V12H4V20M20,20V12H13V20H20M9,4A1,1 0 0,0 8,5A1,1 0 0,0 9,6A1,1 0 0,0 10,5A1,1 0 0,0 9,4M15,4A1,1 0 0,0 14,5A1,1 0 0,0 15,6A1,1 0 0,0 16,5A1,1 0 0,0 15,4M3,8V10H11V8H3M13,8V10H21V8H13Z" />
@@ -257,7 +257,7 @@
 							</div>
 						</div>
 
-						<h6 class="mt-2"><a href="https://maptool.ceschmitt.de/img/corekeeper_map.png" target="_blank">Open Full Map Image (Spoilers)</a></h6>
+						<h6 class="mt-2"><a href="https://maptool.ceschmitt.de/img/corekeeper_map.png" target="_blank" rel="noopener noreferrer">Open Full Map Image (Spoilers)</a></h6>
 
 						<div x-show="$store.data.mapLoaded" style="display: none;" class="mt-2 d-flex align-items-center">
 							<button 
@@ -445,7 +445,7 @@
 							<div class="px-1" x-show="visible" x-transition>
 								<div>
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" style="fill: currentColor;"><path d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z" /></svg> 
-									<a href="https://corekeeper.wikizet.com/en/World_Generation" target="_blank">
+									<a href="https://corekeeper.wikizet.com/en/World_Generation" target="_blank" rel="noopener noreferrer">
 										World Generation
 									</a>, 
 									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2846860078" target="_blank" rel="noopener noreferrer">
@@ -527,7 +527,7 @@
 											</div>
 										</div>
 
-										<a href="https://corekeeper.wikizet.com/en/How_to_Get_the_Rune_Song_Legendary_Sword" target="_blank">
+										<a href="https://corekeeper.wikizet.com/en/How_to_Get_the_Rune_Song_Legendary_Sword" target="_blank" rel="noopener noreferrer">
 											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" style="fill: currentColor;"><path d="M11,18H13V16H11V18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,6A4,4 0 0,0 8,10H10A2,2 0 0,1 12,8A2,2 0 0,1 14,10C14,12 11,11.75 11,15H13C13,12.75 16,12.5 16,10A4,4 0 0,0 12,6Z" /></svg> 
 											How to find Rune Song
 										</a>
@@ -648,7 +648,7 @@
 									<strong>Ceddini</strong>
 									<div class="flex-fill border-bottom border-secondary mx-2"></div>
 									<div class="socials">
-										<a href="https://github.com/Ceddini" target="_blank">GitHub</a>
+										<a href="https://github.com/Ceddini" target="_blank" rel="noopener noreferrer">GitHub</a>
 									</div>
 								</div>
 								<p>Redesign, code rework</p>
@@ -658,8 +658,8 @@
 									<strong>ZeroGravitas</strong>
 									<div class="flex-fill border-bottom border-secondary mx-2"></div>
 									<div class="socials">
-										<a href="https://www.youtube.com/c/ZeroGravitas" target="_blank">YouTube</a>
-										<a href="https://steamcommunity.com/profiles/76561197971318812/myworkshopfiles/?section=guides&appid=1621690" target="_blank">Guides</a>
+										<a href="https://www.youtube.com/c/ZeroGravitas" target="_blank" rel="noopener noreferrer">YouTube</a>
+										<a href="https://steamcommunity.com/profiles/76561197971318812/myworkshopfiles/?section=guides&appid=1621690" target="_blank" rel="noopener noreferrer">Guides</a>
 									</div>
 								</div>
 								<p>Redesign, usability improvements</p>
@@ -669,7 +669,7 @@
 									<strong>Craigins</strong>
 									<div class="flex-fill border-bottom border-secondary mx-2"></div>
 									<div class="socials">
-										<a href="https://github.com/craigins" target="_blank">GitHub</a>
+										<a href="https://github.com/craigins" target="_blank" rel="noopener noreferrer">GitHub</a>
 									</div>
 								</div>
 								<p>Initial codebase, Example Map</p>
@@ -679,7 +679,7 @@
 									<strong>Mz</strong>
 									<div class="flex-fill border-bottom border-secondary mx-2"></div>
 									<div class="socials">
-										<a href="https://github.com/MzHub" target="_blank">GitHub</a>
+										<a href="https://github.com/MzHub" target="_blank" rel="noopener noreferrer">GitHub</a>
 									</div>
 								</div>
 								<p>Mapfile loading</p>
@@ -894,7 +894,7 @@
 
 				<h5>3. Select <code>steam_id</code> Folder</h5>
 				<img src="img/tutorial/step_3.png" class="d-block" width="400" height="200" alt="Select steam id">
-				<span>Select the folder with your steam id. If you see more than one folder, please check <a href="https://www.steamidfinder.com/" target="_blank">online</a> on how to find your steam id.</span>
+				<span>Select the folder with your steam id. If you see more than one folder, please check <a href="https://www.steamidfinder.com/" target="_blank" rel="noopener noreferrer">online</a> on how to find your steam id.</span>
 
 				<h5>4. Select <code>maps</code> Folder</h5>
 				<img src="img/tutorial/step_4.png" class="d-block" width="400" height="200" alt="Select maps folder">
