Fix choose cookies to collapse translation key

--- a/src/index.html
+++ b/src/index.html
@@ -93,9 +93,7 @@
 					</div>
 				</div>
 				<template x-if="$store.data.savedCookies === false">
-					<span class="text-danger" data-i18n>
-						cookies.choose_cookie_to_collapse
-					</span>
+					<span class="text-danger" data-i18n>cookies.choose_cookie_to_collapse</span>
 				</template>
 
 				<div x-show="$store.data.cookiesOpen" class="mt-2 px-1" x-transition="">
