crystal biome update

--- a/src/index.html
+++ b/src/index.html
@@ -503,6 +503,16 @@
 							</div>
 							<div class="contributor">
 								<div class="d-flex align-items-center justify-content-between">
+									<strong>Soul Wade</strong>
+									<div class="flex-fill border-bottom border-secondary mx-2"></div>
+									<div class="socials">
+										<a href="https://twitter.com/soul_wade" target="_blank">Twitter</a>
+									</div>
+								</div>
+								<p>Data, usability improvements</p>
+							</div>
+							<div class="contributor">
+								<div class="d-flex align-items-center justify-content-between">
 									<strong>ZeroGravitas</strong>
 									<div class="flex-fill border-bottom border-secondary mx-2"></div>
 									<div class="socials">
